# academy-first-rag-app

./: .gitignore  0_build_dataset.py  1_export_data.py  DEV_README.md  README.md  _dev_3_create_student_scripts.py  delete_collection.py  delete_collection_complete.py  docker-compose.yml  helpers.py  main.py  main_complete.py  populate.py  populate_complete.py  preproc.py  pyproject.toml  requirements.txt  setup_weaviate.py
dev/: 0_build_dataset.py  1_export_data.py
